more writing; more attempts to fix mathjax jagged baselines

--- a/differential_geometry_in_hott/agda/connections.bib
+++ b/differential_geometry_in_hott/agda/connections.bib
@@ -6,6 +6,37 @@
     urldate      = {2023-10-02}
 }
 
+@misc{baez_schreiber_higher_gauge,
+      title={Higher Gauge Theory}, 
+      author={John C. Baez and Urs Schreiber},
+      year={2006},
+      eprint={math/0511710},
+      archivePrefix={arXiv},
+      primaryClass={math.DG}
+}
+
+@article{baez_huerta_higher_gauge,
+   title={An invitation to higher gauge theory},
+   volume={43},
+   ISSN={1572-9532},
+   url={http://dx.doi.org/10.1007/s10714-010-1070-9},
+   DOI={10.1007/s10714-010-1070-9},
+   number={9},
+   journal={General Relativity and Gravitation},
+   publisher={Springer Science and Business Media LLC},
+   author={Baez, John C. and Huerta, John},
+   year={2010},
+   month=aug, pages={2335–2392} }
+
+@misc{shulman_cohesion,
+      title={Brouwer's fixed-point theorem in real-cohesive homotopy type theory}, 
+      author={Michael Shulman},
+      year={2017},
+      eprint={1509.07584},
+      archivePrefix={arXiv},
+      primaryClass={math.CT}
+}
+
 @phdthesis{myersthesis,
   author = {David Jaz Myers}, 
   title = {Symmetry, Geometry, Modality},
@@ -270,3 +301,49 @@ a kind of cohesive motives.},
   year={1987},
   publisher={North-Holland}
 }
+
+@book{hatcher_at,
+  author = {Hatcher, Allen},
+  isbn = {0-521-79160-X; 0-521-79540-0},
+  keywords = {},
+  pages = {xii+544},
+  publisher = {Cambridge University Press},
+  title = {Algebraic topology},
+  year = 2002
+}
+
+@misc{buchholtz2023central,
+      title={Central H-spaces and banded types}, 
+      author={Ulrik Buchholtz and J. Daniel Christensen and Jarl G. Taxerås Flaten and Egbert Rijke},
+      year={2023},
+      eprint={2301.02636},
+      archivePrefix={arXiv},
+      primaryClass={math.AT}
+}
+
+@book {kirby_siebenmann,
+	AUTHOR = {Kirby, Robion C. and Siebenmann, Laurence
+		 C.},
+	TITLE = {Foundational essays on topological manifolds,
+		 smoothings, and triangulations},
+	SERIES = {Annals of Mathematics Studies},
+	NUMBER = {88},
+	PUBLISHER = {Princeton University Press},
+	YEAR = {1977},
+	PAGES = {v+355},
+	NOTE = {With notes by John Milnor and Michael
+		 Atiyah. MR:0645390. Zbl:0361.57004.},
+	ISSN = {0066-2313},
+	ISBN = {9780691081915},
+}
+
+@book{freedman_quinn,
+ URL = {http://www.jstor.org/stable/j.ctt7ztz2d},
+ abstract = {One of the great achievements of contemporary mathematics is the new understanding of four dimensions. Michael Freedman and Frank Quinn have been the principals in the geometric and topological development of this subject, proving the Poincar and Annulus conjectures respectively. Recognition for this work includes the award of the Fields Medal of the International Congress of Mathematicians to Freedman in 1986. In Topology of 4-Manifolds these authors have collaborated to give a complete and accessible account of the current state of knowledge in this field. The basic material has been considerably simplified from the original publications, and should be accessible to most graduate students. The advanced material goes well beyond the literature; nearly one-third of the book is new. This work is indispensable for any topologist whose work includes four dimensions. It is a valuable reference for geometers and physicists who need an awareness of the topological side of the field.Originally published in 1990.ThePrinceton Legacy Libraryuses the latest print-on-demand technology to again make available previously out-of-print books from the distinguished backlist of Princeton University Press. These paperback editions preserve the original texts of these important books while presenting them in durable paperback editions. The goal of the Princeton Legacy Library is to vastly increase access to the rich scholarly heritage found in the thousands of books published by Princeton University Press since its founding in 1905.},
+ author = {Michael H. Freedman and Frank Quinn},
+ publisher = {Princeton University Press},
+ title = {Topology of 4-Manifolds (PMS-39)},
+ urldate = {2024-01-01},
+ year = {1990}
+}
+
