ongoing startup work

--- a/differential_geometry_in_hott/agda/connections.bib
+++ b/differential_geometry_in_hott/agda/connections.bib
@@ -88,6 +88,13 @@ url = {https://github.com/UniMath/agda-unimath/}
   url = {https://www.youtube.com/playlist?list=PLFeEvEPtX_0S6vxxiiNPrJbLu9aK1UVC_},
 }
 
+@online{roe_surgery,
+  title = {Surgery for Amateurs},
+  date = {2017},
+  author = {Andrew Ranicki and John Roe},
+  url = {https://sites.psu.edu/surgeryforamateurs}
+}
+
 @book{baez1994gauge,
   title={Gauge Fields, Knots And Gravity},
   author={Baez, J.C. and Muniain, J.P.},
@@ -347,3 +354,22 @@ a kind of cohesive motives.},
  year = {1990}
 }
 
+@book{milnor1974characteristic,
+  title={Characteristic Classes},
+  author={Milnor, J.W. and Stasheff, J.D.},
+  isbn={9780691081229},
+  lccn={lc72004050},
+  series={Annals of mathematics studies},
+  year={1974},
+  publisher={Princeton University Press}
+}
+
+@book{bott_tu,
+  title={Differential Forms in Algebraic Topology},
+  author={Bott, R. and Tu, L.W.},
+  isbn={9781475739510},
+  lccn={81009172},
+  series={Graduate Texts in Mathematics},
+  year={1982},
+  publisher={Springer New York}
+}
