--- a/differential_geometry_in_hott/agda/connections.bib
+++ b/differential_geometry_in_hott/agda/connections.bib
@@ -37,6 +37,15 @@
       primaryClass={math.CT}
 }
 
+@misc{myersgood,
+      title={Good Fibrations through the Modal Prism}, 
+      author={David Jaz Myers},
+      year={2022},
+      eprint={1908.08034},
+      archivePrefix={arXiv},
+      primaryClass={math.CT}
+}
+
 @phdthesis{myersthesis,
   author = {David Jaz Myers}, 
   title = {Symmetry, Geometry, Modality},
