--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
@@ -98,6 +98,7 @@
 \newcommand{\ad}{\mathrm{ad}}
 \newcommand{\Ad}{\mathrm{Ad}}
 \newcommand{\uni}{\mathcal{U}}
+\renewcommand{\loop}{\Omega}
 \newcommand{\mysection}[1]{\section{\texorpdfstring{#1}{\detokenize{#1}}}}
 \newcommand{\mychapter}[1]{\chapter{\texorpdfstring{#1}{\detokenize{#1}}}}
 \newcommand{\mychapterstar}[1]{\chapter*{\texorpdfstring{#1}{\detokenize{#1}}}}
