this feels better

--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
@@ -86,12 +86,17 @@
 \newcommand{\Aut}{\mathrm{Aut}}
 \newcommand{\BAut}{\mathrm{BAut}}
 \newcommand{\BAutoso}{\BAut_1(S^1)}
+\newcommand{\ptt}[2]{{#1}_{+{#2}}}
+\newcommand{\BAutosoc}{\ptt{\BAutoso}{C_4}}
+\newcommand{\Bpb}{\ptt{B}{b}}
 \newcommand{\EAut}{\mathrm{EAut}}
 \newcommand{\LAut}{\mathrm{LAut}}
 \newcommand{\im}{\mathrm{im}}
 \newcommand{\Fin}{\mathrm{Fin}}
 \newcommand{\Type}{\mathsf{Type}}
 \newcommand{\Typeo}{\Type_{\shapeo}}
+\newcommand{\Types}{\Type_{\shape}}
+\newcommand{\Typesp}{\Type_{\shape *}}
 \newcommand{\pinv}{p^{-1}}
 \newcommand{\aut}{\mathrm{Aut}}
 \newcommand{\diffeo}{\mathrm{Diffeo}}
