--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/connections.bib
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/connections.bib
@@ -268,13 +268,15 @@ a kind of cohesive motives.},
     title = {Mathlib charted space},
     url = {{https://github.com/leanprover-community/mathlib/blob/cd6f2720b829061d9f01a2ee7bf4bc6ef53fedde/src/geometry/manifold/charted\_space.lean}}
 }
+
 @Book{hottbook,
-  author =    {The {Univalent Foundations Program}},
+  author =    {{Univalent Foundations Program}},
   title =     {Homotopy Type Theory: Univalent Foundations of Mathematics},
   publisher = {\url{https://homotopytypetheory.org/book}},
   address =   {Institute for Advanced Study},
   year =      2013
 }
+
 @article{DBLP:journals/corr/abs-1911-00580,
   author    = {Mart{\'{\i}}n H{\"{o}}tzel Escard{\'{o}}},
   title     = {Introduction to Univalent Foundations of Mathematics with Agda},
