wrote more after reflecting on Freed-Hopkins

--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/connections.bib
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/connections.bib
@@ -114,6 +114,15 @@ url = {https://github.com/UniMath/agda-unimath/}
   publisher={World Scientific Publishing Company}
 }
 
+@misc{freed1992classical,
+      title={Classical Chern-Simons theory, Part 1}, 
+      author={Daniel S. Freed},
+      year={1992},
+      eprint={hep-th/9206021},
+      archivePrefix={arXiv},
+      primaryClass={hep-th}
+}
+
 @misc{freed2013chernweil,
   title={Chern-Weil forms and abstract homotopy theory},
   author={Daniel S. Freed and Michael J. Hopkins},
@@ -383,4 +392,30 @@ a kind of cohesive motives.},
   series={Graduate Texts in Mathematics},
   year={1982},
   publisher={Springer New York}
+}
+@book{talbott,
+  title={The Future Does Not Compute: Transcending the Machines in Our Midst},
+  author={Talbott, S.},
+  isbn={9781565920859},
+  lccn={95363638},
+  url={https://books.google.com/books?id=KcXaAAAAMAAJ},
+  year={1995},
+  publisher={O'Reilly \& Associates}
+}
+
+@mastersthesis{crane_connections,
+title = {Discrete connections for geometry processing},
+school = {California Institute of Technology},
+author = {Keenan Crane},
+year = {2010},
+url = {http://resolver.caltech.edu/CaltechTHESIS:05282010-102307125}
+}
+
+@book{crane_ddg,
+editor = {Keenan Crane},
+title = {An Excursion Through Discrete Differential Geometry},
+journal = {Proceedings of Symposia in Applied Mathematics},
+volume = {76},
+year = {2020},
+publisher = {American Mathematical Society}
 }
