--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
@@ -23,6 +23,7 @@
 \RequirePackage{quiver}
 \RequirePackage{mathtools}
 \RequirePackage{tcolorbox}
+\RequirePackage{mathrsfs}
 
 \graphicspath{ {./img/} }
 
@@ -33,6 +34,7 @@
 \newcommand{\tp}{\;\mathrm{type}}
 \newcommand{\Hom}{\mathrm{Hom}}
 \newcommand{\G}{\Gamma}
+\renewcommand{\gg}{\mathfrak{g}}
 \newcommand{\gauge}{\mathcal{G}} % make this mathscr one day
 \newcommand{\pit}[1]{\prod_{(#1)}} % pi-type
 \newcommand{\pitxa}{\pit{x:A}}
@@ -105,6 +107,7 @@
 \newcommand{\uni}{\mathcal{U}}
 \renewcommand{\loop}{\Omega}
 \newcommand{\mysection}[1]{\section{\texorpdfstring{#1}{\detokenize{#1}}}}
+\newcommand{\mysubsection}[1]{\subsection{\texorpdfstring{#1}{\detokenize{#1}}}}
 \newcommand{\mychapter}[1]{\chapter{\texorpdfstring{#1}{\detokenize{#1}}}}
 \newcommand{\mychapterstar}[1]{\chapter*{\texorpdfstring{#1}{\detokenize{#1}}}}
 
