--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
@@ -43,6 +43,7 @@
 \newcommand{\adj}{\dashv}
 \newcommand{\refl}{\ensuremath{\textrm{refl}}}
 \newcommand{\ap}{\ensuremath{\textsf{ap}}}
+\newcommand{\pr}{\ensuremath{\mathrm{pr}}}
 \newcommand{\ind}{\ensuremath{\textsf{ind}}}
 \newcommand{\lift}{\ensuremath{\textsf{lift}}}
 \newcommand{\inv}{\ensuremath{\textsf{inv}}}
@@ -87,7 +88,8 @@
 \newcommand{\pt}{\mathrm{pt}}
 \newcommand{\Aut}{\mathrm{Aut}}
 \newcommand{\BAut}{\mathrm{BAut}}
-\newcommand{\BAutoso}{\BAut_1(S^1)}
+\newcommand{\BAuto}[1]{\BAut_1(#1)}
+\newcommand{\BAutoso}{\BAuto{S^1}}
 \newcommand{\ptt}[2]{{#1}_{+{#2}}}
 \newcommand{\BAutosoc}{\ptt{\BAutoso}{C_4}}
 \newcommand{\Bpb}{\ptt{B}{b}}
@@ -176,5 +178,6 @@
 \newtheorem{mydef}{Definition}
 \newtheorem{mythm}{Theorem}
 \newtheorem{mylemma}{Lemma}
+\newtheorem{mycor}{Corollary}
 \newtheorem{myprop}{Proposition}
 \newtheorem{myclaim}{Claim}
