--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
@@ -36,12 +36,12 @@
 \newcommand{\G}{\Gamma}
 \renewcommand{\gg}{\mathfrak{g}}
 \newcommand{\gauge}{\mathcal{G}} % make this mathscr one day
-\newcommand{\pit}[1]{\prod_{(#1)}} % pi-type
+\newcommand{\pit}[1]{\prod_{#1}} % pi-type
 \newcommand{\pitxa}{\pit{x:A}}
-\newcommand{\sit}[1]{\sum_{(#1)}} % sigma-type
+\newcommand{\sit}[1]{\sum_{#1}} % sigma-type
 \newcommand{\ent}{\vdash}
 \newcommand{\adj}{\dashv}
-\newcommand{\refl}{\ensuremath{\textrm{refl}}}
+\newcommand{\refl}{\ensuremath{\textsf{refl}}}
 \newcommand{\ap}{\ensuremath{\textsf{ap}}}
 \newcommand{\pr}{\ensuremath{\mathrm{pr}}}
 \newcommand{\ind}{\ensuremath{\textsf{ind}}}
@@ -59,6 +59,9 @@
 \newcommand{\reflfx}{\ensuremath{\refl_{f(x)}}}
 \newcommand{\pathm}{\ensuremath{\mathcal{P}_1 (M)}}
 \newcommand{\pp}{\ensuremath{\mathcal{P}_1}}
+\newcommand{\two}{\ensuremath{\mathbb{2}}}
+\newcommand{\oo}{\ensuremath{\mathbb{O}}}
+\newcommand{\join}{\ensuremath{*}}
 
 \newcommand{\rr}{\ensuremath{\mathbb{R}}}
 \newcommand{\rrn}{\ensuremath{\mathbb{R}^n}}
