--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
@@ -61,6 +61,7 @@
 \newcommand{\pp}{\ensuremath{\mathcal{P}_1}}
 \newcommand{\two}{\ensuremath{\mathbb{2}}}
 \newcommand{\oo}{\ensuremath{\mathbb{O}}}
+\newcommand{\const}{\ensuremath{\mathrm{const}}}
 \newcommand{\join}{\ensuremath{*}}
 
 \newcommand{\rr}{\ensuremath{\mathbb{R}}}
